force-app/main/default/objects/Case/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <description>What needs to be possible when the feature request is complete</description>
    <label>Acceptance Criteria</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>