force-app/main/default/objects/Case/fields/Deployment_Link__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Link__c</fullName>
    <description>Link to the Copado deployment record</description>
    <label>Deployment Link</label>
    <type>Url</type>
</CustomField>