force-app/main/default/objects/Case/fields/Deployment_Tracker_Tab__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Tracker_Tab__c</fullName>
    <description>format is &quot;4 digit year&quot;_&quot;Week #&quot; i.e. &quot;2025_17&quot; = week 17 of 2025</description>
    <label>Deployment Tracker Tab</label>
    <length>7</length>
    <type>Text</type>
</CustomField>