force-app/main/default/objects/Case/fields/Est_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Deployment_Date__c</fullName>
    <description>Expected date of deployment</description>
    <label>Est Deployment Date</label>
    <type>Date</type>
</CustomField>