force-app/main/default/objects/Case/fields/Post_Deployment_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Post_Deployment_Tasks__c</fullName>
    <description>Tasks that must be completed AFTER deployment</description>
    <label>Post Deployment Tasks</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>