force-app/main/default/objects/Case/fields/Pre_Deployment_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deployment_Tasks__c</fullName>
    <description>Things that must be done BEFORE deployment</description>
    <label>Pre Deployment Tasks</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>