force-app/main/default/objects/Case/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <description>Dev requirements related to a feature request</description>
    <label>Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>