force-app/main/default/objects/Case/fields/Testing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Testing_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether testing of a new feature is completed or not</description>
    <label>Testing Complete</label>
    <type>Checkbox</type>
</CustomField>