force-app/main/default/objects/Case/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>Details how a feature request is expected to be used in the course of work</description>
    <label>Use Case</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>