force-app/main/default/objects/Case/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <description>Used to clarify a user&apos;s feature or enhancement request</description>
    <label>User Story</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>