force-app/main/default/objects/Case/recordTypes/Salesforce_Feature_Request.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Feature_Request</fullName>
    <active>true</active>
    <businessProcess>Feature Request</businessProcess>
    <description>Submissions for new or updated Salesforce features</description>
    <label>Salesforce Feature Request</label>
</RecordType>